# 3D-Rubiks-Cube

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile.sh  main  main.cpp  run.sh  vcpkg.json
shaders/: shader.frag  shader.vert
src/: Rubiks.hpp  constants.hpp
src/cube/: Cube.cpp  Cube.hpp  Cube3.cpp  Cube3.hpp  Side.cpp  Side.hpp
src/gui/: CubeApp.cpp  CubeApp.hpp  CubeGUI.cpp  CubeGUI.hpp  GraphicsPipeline.cpp  ImageViews.cpp  LogicalDevice.cpp  PhysicalDevices.cpp  Pipeline.cpp  Pipeline.hpp  SwapChain.cpp  ValidationLayers.cpp  WindowSurface.cpp  camera.cpp  camera.hpp  controller.cpp  controller.hpp  cube_app.cpp  cube_app.hpp  cube_gui.cpp  cube_gui.hpp  cube_obj.cpp  cube_obj.hpp  device.cpp  device.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  pipeline_config_info.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  utils.hpp
src/solver/: Solver.cpp  Solver.hpp
src/solver/ckociemba/: cubiecube.c  facecube.c  prunetable_helpers.c  search.c  solve.c
src/solver/kociemba/: __init__.py  color.py  coordcube.py  corner.py  cubiecube.py  edge.py  facecube.py  facelet.py  search.py  solve.py  tables.py  tools.py
src/solver/kociemba/prunetables/: .txt
